--- a/index.html
+++ b/index.html
@@ -29,9 +29,78 @@
                             <div class="h1-posts">
                                 <h1>Posts mais recentes</h1>
                             </div>
-                            <div class="class-posts">
-                                
-                            </div>
+                            <div class="container-id-card"><!--container pai do card-->
+                                <div class="id-card">
+                                    <div id="card">
+                                        <div class="image">
+                                            <img src="imagens/dev-mobile.svg" alt="image">
+                                        </div>
+                                        <div class="container-card-text">
+                                            <div class="text-information">
+                                                <h2 id="card-h2">desenvolvimento</h2>
+                                                <h1 id="card-h1">Desenvolvimento mobile</h1>
+                                                <h3 id="card-h4">By <span> Fabio Tetsuo </span></h3>
+                                                <p id="card-p">
+                                                    Lorem ipsum dolor sit amet consectetur. 
+                                                    In vitae urna commodo amet congue integer dapibus. 
+                                                    Interdum semper mauris convallis fusce enim odio. 
+                                                    Vitae montes ridiculus felis.
+                                                </p>
+                                                <h3 id="card-h4"><span>22 Agosto 2022</span></h3>
+                                            </div>
+                                        </div>
+                                    </div><!--card--> 
+                                    <div id="card">
+                                        <div class="image">
+                                            <img src="imagens/balancear.svg" alt="image">
+                                        </div>
+                                        <div class="container-card-text">
+                                            <div class="text-information">
+                                                <h2 id="card-h2">saude</h2>
+                                                <h1 id="card-h1">Balancear vida profissional e pessoal</h1>
+                                                <h3 id="card-h4">By <span> Ridho Satriawan</span></h3>
+                                                <p id="card-p">
+                                                    Lorem ipsum dolor sit amet consectetur. 
+                                                    Et consectetur at consectetur sed nisl tempor.
+                                                </p>
+                                                <h3 id="card-h4"><span>22 Agosto 2022</span></h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div id="card">
+                                        <div class="image">
+                                            <img src="imagens/confg-vscode.svg" alt="image">
+                                        </div>
+                                        <div class="container-card-text">
+                                            <div class="text-information">
+                                                <h2 id="card-h2">desenvolvimento</h2>
+                                                <h1 id="card-h1">Configurando VSCode</h1>
+                                                <h3 id="card-h4">By <span> Fabio Tetsuo </span></h3>
+                                                <p id="card-p">
+                                                    Lorem ipsum dolor sit amet consectetur. Erat interdum tortor ac sagittis id a etiam. Tellus vitae arcu dignissim massa aliquam vel tellus. Ipsum massa arcu nulla sed purus in ac.                                         </p>
+                                                </p>
+                                                <h3 id="card-h4"><span>22 Agosto 2022</span></h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div id="card">
+                                        <div class="image">
+                                            <img src="imagens/2monitorse.svg" alt="image">
+                                        </div>
+                                        <div class="container-card-text">
+                                            <div class="text-information">
+                                                <h2 id="card-h2">Produtividade</h2>
+                                                <h1 id="card-h1">2 monitores ou 1 ultrawide?</h1>
+                                                <h3 id="card-h4">By <span> Fabio Tetsuo </span></h3>
+                                                <p id="card-p">
+                                                    Lorem ipsum dolor sit amet consectetur. Arcu tellus adipiscing sagittis tristique. Eget molestie posuere enim pretium venenatis nunc ligula donec a. Velit senectus amet nulla.
+                                                </p>
+                                                <h3 id="card-h4"><span>22 Agosto 2022</span></h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div><!--Fim container pai do card-->
                         </section>
                     </main><!--Fim classflex-do-main-->
     
