--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                         <section class="posts">
                             <div class="h1-posts">
                                 <h1>Posts mais recentes</h1>
+                                <p><a href="#">Ver todos</a></p>
                             </div>
                             <div class="container-id-card"><!--container pai do card-->
                                 <div class="id-card">
@@ -91,7 +92,7 @@
                                             <div class="text-information">
                                                 <h2 id="card-h2">Produtividade</h2>
                                                 <h1 id="card-h1">2 monitores ou 1 ultrawide?</h1>
-                                                <h3 id="card-h4">By <span> Fabio Tetsuo </span></h3>
+                                                <h3 id="card-h4">By <span> Fulano da Silva </span></h3>
                                                 <p id="card-p">
                                                     Lorem ipsum dolor sit amet consectetur. Arcu tellus adipiscing sagittis tristique. Eget molestie posuere enim pretium venenatis nunc ligula donec a. Velit senectus amet nulla.
                                                 </p>
@@ -103,13 +104,54 @@
                             </div><!--Fim container pai do card-->
                         </section>
                     </main><!--Fim classflex-do-main-->
-    
-                    <aside class="classflex-do-aisde">
-    
-                    </aside><!--Fim classflex-do-aisde-->
+                    <aside class="flexgrid-do-aside">
+                        <section class="classflex-do-aisde">
+                            <div class="posts-Pop">
+                                <div class="pop">
+                                    <h3>Posts Populares</h3>
+                                </div>
+                                <div class="container-pop">
+                                    <div id="id-pop">
+                                        <div class="image-pop">
+                                            <img src="imagens/desenvolvimento-atual.svg" alt="">
+                                        </div>
+                                        <div class="flex-do-text-pop">
+                                            <div class="text-pop">
+                                                <h1 id="h1-pop">Desevolvimento atual</h1>
+                                                <h2 id="h2-pop">22 Agosto 2022</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div id="id-pop">
+                                        <div class="image-pop">
+                                            <img src="imagens/gitlab.svg" alt="">
+                                        </div>
+                                        <div class="flex-do-text-pop">
+                                            <div class="text-pop">
+                                                <h1 id="h1-pop">GitLab vs GitHub</h1>
+                                                <h2 id="h2-pop">22 Agosto 2022</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div id="id-pop">
+                                        <div class="image-pop">
+                                            <img src="imagens/cafe.svg" alt="">
+                                        </div>
+                                        <div class="flex-do-text-pop">
+                                            <div class="text-pop">
+                                                <h1 id="h1-pop">Café atrapalha?</h1>
+                                                <h2 id="h2-pop">22 Agosto 2022</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>                     
+                    </aside>
                 </div><!--Fim container-grid-->
             </div>
         </div>
     </div><!--Fim do container-geral--> 
 </body>
 </html>
+
