--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="description" content="The Dev News é um blog focado em desenvolvimento, produtividade, saúde e opiniões do mundo da tecnologia. Explore artigos recentes e dicas úteis para aprimorar suas habilidades técnicas e alcançar equilíbrio entre vida profissional e pessoal.">
     <meta name="keywords" content="blog de tecnologia, desenvolvimento, produtividade, saúde, opiniões, tecnologia, posts recentes, desenvolvimento web, desenvolvimento mobile, VSCode, equilíbrio vida profissional, The Dev News">
     <meta name="author" content="Ademar José Martins Junior">
+
+    <link rel="stylesheet" href="styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     <title>The Dev News</title>
-    
+
 </head>
 <body>
     <div class="container-geral">
