--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <section class="banner">
                             <div class="imagem-centro">
                                 <div class="image-bner">
-                                    <img src="imagens/baner.svg" alt="">
+                                    <img src="imagens/banner2.svg" alt="">
                                 </div>
                             </div>
                         </section>
@@ -159,25 +159,27 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="container-categoria">
-                                        <div class="cat">
-                                            <h3>Categorias</h3>
-                                        </div>
-                                        <div id="categoria">
-                                            <h2 id="h1-cat"><a href="#">> saude</a></h2>
-                                            <p id="p-cat">(1)</p>
-                                        </div>
-                                        <div id="categoria">
-                                            <h2 id="h1-cat"><a href="#">> desenvolvimento</a></h2>
-                                            <p id="p-cat">(2)</p>
-                                        </div>
-                                        <div id="categoria">
-                                            <h2 id="h1-cat"><a href="#">> produtividade</a></h2>
-                                            <p id="p-cat">(3)</p>
-                                        </div>
-                                        <div id="categoria">
-                                            <h2 id="h1-cat"><a href="#">> opiniao</a></h2>
-                                            <p id="p-cat">(4)</p>
+                                    <div class="centraliza-cat">
+                                        <div class="container-categoria">
+                                            <div class="cat">
+                                                <h3>Categorias</h3>
+                                            </div>
+                                            <div id="categoria">
+                                                <h2 id="h1-cat"><a href="#">> saude</a></h2>
+                                                <p id="p-cat">(1)</p>
+                                            </div>
+                                            <div id="categoria">
+                                                <h2 id="h1-cat"><a href="#">> desenvolvimento</a></h2>
+                                                <p id="p-cat">(2)</p>
+                                            </div>
+                                            <div id="categoria">
+                                                <h2 id="h1-cat"><a href="#">> produtividade</a></h2>
+                                                <p id="p-cat">(3)</p>
+                                            </div>
+                                            <div id="categoria">
+                                                <h2 id="h1-cat"><a href="#">> opiniao</a></h2>
+                                                <p id="p-cat">(4)</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
