--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <section class="banner">
                             <div class="imagem-centro">
                                 <div class="image-bner">
-                                    <img src="imagens/banner2.svg" alt="">
+                                    <img src="imagens/baner.svg" alt="">
                                 </div>
                             </div>
                         </section>
