--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,9 @@
 <body>
     <div class="container-geral">
         <header>
-            <h1>The Dev News</h1>   
+            <nav>
+                <h1>The Dev News</h1>  
+            </nav> 
         </header>
 
         <div class="centraliza-containerflex-do-grid">
