--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <div class="container-geral">
         <header>
             <nav>
-                <h1>The Dev News</h1>  
+                <h1 id="h1-nav">The Dev News</h1>  
             </nav> 
         </header>
 
